force-app/main/default/objects/SOC__c/SOC__c.object-meta.xml
<CustomObject>
    <label>SOC</label>
    <nameField>
        <label>SOC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SOCS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>