force-app/main/default/objects/SOC__c/fields/flag__c.field-meta.xml
<CustomField>
    <fullName>flag__c</fullName>
    <label>flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>paid</fullName>
            </value>
            <value>
                <fullName>unpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>