force-app/main/default/objects/SOC__c/fields/invoice_amt__c.field-meta.xml
<CustomField>
    <fullName>invoice_amt__c</fullName>
    <label>invoice amt</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>